# enex_analysis_engine

./: .buildinfo  .gitignore  EXAMPLES.md  IO_DOCS.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: advanced.doctree  core.doctree  engines.doctree  index.doctree  subsystems.doctree  utilities.doctree
.doctrees/examples/: advanced-examples.doctree  air-source-heat-pump.doctree  analysis-basics.doctree  components.doctree  electric-boiler.doctree  gas-boiler.doctree  ground-source-heat-pump-boiler.doctree  ground-source-heat-pump.doctree  heat-pump-boiler.doctree  index.doctree  solar-assisted-gas-boiler.doctree  tips.doctree
.doctrees/getting-started/: configuration.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/guides/: advanced-topics.doctree  index.doctree  io-guide.doctree  nomenclature.doctree  user-guide.doctree
.doctrees/theory/: ashpb_model.doctree  exergy-analysis.doctree  g_function.doctree  index.doctree  thermodynamics.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/enex_analysis/: ashpb_pv_ess.html  ashpb_stc_preheat.html  ashpb_stc_tank.html  dynamic_context.html  enex_engine.html  enex_functions.html  gas_boiler_tank.html  subsystems.html  tank_stratification_model.html
_modules/enex_analysis/components/: fan.html
_sources/api/: advanced.rst.txt  engines.rst.txt  index.rst.txt  subsystems.rst.txt  utilities.rst.txt
_sources/examples/: advanced-examples.md.txt  electric-boiler.md.txt  ground-source-heat-pump-boiler.md.txt  ground-source-heat-pump.md.txt  index.rst.txt  solar-assisted-gas-boiler.md.txt  tips.md.txt
_sources/getting-started/: configuration.rst.txt  index.rst.txt  installation.rst.txt
_sources/guides/: advanced-topics.rst.txt  index.rst.txt  io-guide.md.txt  nomenclature.md.txt  user-guide.rst.txt
_sources/theory/: exergy-analysis.rst.txt  index.rst.txt  thermodynamics.rst.txt
_static/css/: custom.css
api/: advanced.html  core.html  engines.html  index.html  subsystems.html  utilities.html
docs/: Makefile  api.rst  ashpb_architecture.md  conf.py  examples.rst  index.rst  installation.rst  user_guide.rst
docs/guides/: air_source_heat_pump_boiler.md  constants.md  dynamic_context.md  enex_engine.md  enex_functions.md  gas_boiler.md  gas_boiler_tank.md  ground_source_heat_pump_boiler.md  nomenclature.md  solar_assisted_gas_boiler.md  subsystems.md
docs/guides/01_core/: calc_util.md  enex_engine.md
docs/guides/04_subsystems/: subsystems.md
docs/guides/05_theory_and_physics/: tank_stratification_model.md  theory_manual.bib  theory_manual_KR.bbl  theory_manual_KR.fdb_latexmk
docs/guides/theory/: theory_manual.bib  theory_manual_EN.aux  theory_manual_EN.bbl  theory_manual_EN.blg  theory_manual_EN.fdb_latexmk  theory_manual_EN.fls  theory_manual_EN.out  theory_manual_EN.tex  theory_manual_EN.toc  theory_manual_KR.aux  theory_manual_KR.bbl  theory_manual_KR.blg  theory_manual_KR.fdb_latexmk  (+3 more)
docs/source/: EXAMPLES.md  api.rst  conf.py  index.rst  theory.rst
examples/: advanced-examples.html  air-source-heat-pump.html  analysis-basics.html  components.html  electric-boiler.html  gas-boiler.html  ground-source-heat-pump-boiler.html  ground-source-heat-pump.html  heat-pump-boiler.html  index.html  solar-assisted-gas-boiler.html  tips.html
getting-started/: configuration.html  index.html  installation.html  quickstart.html
guides/: advanced-topics.html  index.html  io-guide.html  nomenclature.html  user-guide.html
manuscripts/: theory_manual.bib  theory_manual_EN.bbl  theory_manual_EN.blg  theory_manual_EN.out  theory_manual_EN.tex  theory_manual_KR.bbl  theory_manual_KR.blg  theory_manual_KR.fdb_latexmk  theory_manual_KR.fls  theory_manual_KR.out  theory_manual_KR.tex
manuscripts/diff_temporary/: entire_manuscript_diff_auto_generated.tex  entire_manuscript_diff_auto_generated_EN.tex  entire_manuscript_diff_auto_generated_KR.tex
plot code/: Fig07_fan_characteristics.py
simulation/: ASHPB2_plot.ipynb  ASHPB_optimization_trajectory.ipynb  ASHPB_plot.ipynb  ASHP_plot.ipynb  GSHPB_plot.ipynb  PV_plot.ipynb  Tank_plot.ipynb
src/enex_analysis/: ASHPB_STC_tank.py  ASHPB_params_standard.md  AirSourceHeatPumpBoiler.py  AirSourceHeatPump_CV.py  AirSourceHeatPump_VAV.py  DHW_main_engine.py  ElectricBoiler.py  GasBoiler.py  GasBoilerTank.py  GroundSourceHeatPumpBoiler.py  PV_to_Converter.py  SolarAssistedGasBoiler.py  Tank_stratification_model.py  __init__.py  air_source_heat_pump.py  air_source_heat_pump_boiler.py  air_source_heat_pump_ref_cycle.py  ashpb_pv_ess.py  ashpb_stc_preheat.py  ashpb_stc_tank.py  balance_helpers.py  calc_util.py  constants.py  cop.py  dhw.py  dynamic_context.py  eb_pv_ess.py  eb_stc_preheat.py  eb_stc_tank.py  electric_boiler.py  enex_engine.py  enex_engine_dynamic.py  enex_engine_transient.py  enex_functions.py  g_function.py  gas_boiler.py  gas_boiler_tank.py  ground_source_heat_pump.py  ground_source_heat_pump_boiler.py  ground_source_heat_pump_ref_cycle.py  (+18 more)
temp/: verify_logspace_interpolation.py
tests/: test_components.py  test_cop.py  test_enex_functions.py  test_g_function.py  test_heat_transfer.py  test_tdma.py
theory/: ashpb_model.html  exergy-analysis.html  g_function.html  index.html  thermodynamics.html
(+104 files in other folders)
