[project]
name = "enex-analysis-engine"
version = "0.1.0"
description = "Energy-Exergy Analysis Engine for Building Energy Systems"
readme = "README.md"
authors = [
    { name = "Habin Jo", email = "habinjo0608@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dartwork-mpl",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "salib>=1.5.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enex_analysis"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "shibuya>=0.2.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=3.0.1",
    "sphinx-click>=6.0.0",
    "linkify-it-py>=2.0.0",
]

[tool.uv.sources]
dartwork-mpl = { git = "https://github.com/dartwork-repo/dartwork-mpl" }
