[project]
name = "enex-analysis-engine"
version = "0.1.0"
description = "Energy-Exergy Analysis Engine for Building Energy Systems"
readme = "README.md"
authors = [
    { name = "Habin Jo", email = "habinjo0608@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "coolprop>=7.2.0",
    "dartwork-mpl",
    "fastapi>=0.135.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pvlib>=0.15.0",
    "pydantic>=2.12.5",
    "pygfunction>=2.3.1",
    "salib>=1.5.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.44.0",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enex_analysis"]

[tool.uv.sources]
dartwork-mpl = { git = "https://github.com/dartworklabs/dartwork-mpl" }

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.8.6",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=3.0.1",
    "sphinx-click>=6.0.0",
    "linkify-it-py>=2.0.0",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E741",   # ambiguous variable name (physics code uses single letters)
    "B006",   # mutable default argument (dataclass patterns)
    "E501",   # line too long (physics code often has long equations)
]

[tool.ruff.lint.isort]
known-first-party = ["enex_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
